<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controler.RegisterActivity"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/btn_retour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retour"
                android:layout_marginBottom="20dp"
                android:onClick="retour"
                />

            <TextView
                android:id="@+id/register_tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Créer votre compte pour pouvoir utiliser TopMap"
                tools:ignore="HardcodedText"
                />

            <TextView
                android:id="@+id/register_tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Qui etes vous ?"
                android:padding="10dp"
                tools:ignore="HardcodedText"
                />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="70dp"
                >
                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:textSize="15sp"
                    />
             </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="70dp"

                >
                <EditText
                    android:id="@+id/input_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/firstname"
                    android:inputType="text"
                    android:textSize="15sp"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_dateNaiss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="70dp"
                >
                <EditText
                    android:id="@+id/input_dateNaiss"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/dateNaiss"
                    android:inputType="datetime"
                    android:textSize="14sp"
                    />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/register_tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Aidez nous a vous contacter"
                android:padding="10dp"
                tools:ignore="HardcodedText"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="70dp"
                >
                <EditText
                    android:id="@+id/input_mail"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/mail"
                    android:inputType="textWebEmailAddress"
                    android:textSize="15sp"
                    />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="70dp"
                >
                <EditText
                    android:id="@+id/input_tel"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/tel"
                    android:inputType="number"
                    android:textSize="15sp"
                    />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/register_tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="C'est presque fini !"
                android:padding="10dp"
                tools:ignore="HardcodedText"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_pseudo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="70dp"
                >
                <EditText
                    android:id="@+id/input_pseudo"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/pseudo"
                    android:inputType="text"
                    android:textSize="15sp"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="70dp"
                >
                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="15sp"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password_verif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="70dp"
                >
                <EditText
                    android:id="@+id/input_password_verif"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_verif"
                    android:inputType="textPassword"
                    android:textSize="15sp"
                    />
                </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="J'ai termine !"
                tools:ignore="HardcodedText"
                />
            
            <ProgressBar
                android:id="@+id/pb_loader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:visibility="invisible"
                android:layout_marginTop="10dp"
                />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>